--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <title>JS Bin</title>
 </head>
 <body>
-  <div id="locationField">
-    <input id="autocomplete" placeholder="Enter your address" type="text" />
-  </div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqniokk1Bwa33iLzyLidcM9TIthH-wtZc&libraries=places&callback=initAutocomplete" async defer></script>
-</body>
-</html>
+ {
+            font-family: Arial;
+            font-size: 10pt;
+        }
+    </style>
+</head>
+<body>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCqniokk1Bwa33iLzyLidcM9TIthH-wtZc&libraries=places"></script>
+    <script type="text/javascript">
