--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
 </head>
+
 <body>
- {
-            font-family: Arial;
-            font-size: 10pt;
-        }
-    </style>
-</head>
-<body>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCqniokk1Bwa33iLzyLidcM9TIthH-wtZc&libraries=places"></script>
-    <script type="text/javascript">
+  <div id="locationField">
+    <input id="autocomplete" placeholder="Enter your address" type="text" />
+  </div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqniokk1Bwa33iLzyLidcM9TIthH-wtZc&libraries=places&callback=initAutocomplete" async defer></script>
+</body>
+
+</html>
+
