--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ html>
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initAutocomplete&libraries=places&v=weekly"
       defer
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
 
