--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
-    <link rel="stylesheet" href="./assets/Style.css">
+    <link rel="stylesheet" href="./assets2/Style.css">
 </head>
 <body>
     <header>
@@ -15,10 +15,24 @@
     </header> 
     <div id="InputBox">
         <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" alt="Map of Seattle">
-        <input type="search" placeholder="Search" id="Searchbox">
+        <input type="search" placeholder="Search" id="Searchbox pac-input"class="controls">
                 <button type="submit"
                     id="search-button">Search</button>
         </input>      
-    </div>          
+    </div>
+    <div class="parent">
+        <div class="leftchild">
+            <h3 id="city-name-text">
+            </h3>
+            <p id="wiki-text">
+            </p> 
+        </div>
+        <div class="rightchild">
+            <section>
+                <image id="showimage"></image>
+            </section>
+            
+        </div>
+    </div>         
 </body>
 </html>
