image api test codes

--- a/index2.html
+++ b/index2.html
@@ -35,5 +35,6 @@
         </div>
     </div>         
     <script src="./wikiapi.js"></script>
+    <script src="./image_script.js"></script>
 </body>
 </html>
