--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="col">
                 <section>
-                    <image id="showimage"></image>
+                    <image id="showimage"class="w-100 h-100"></image>
                 </section>
             </div>
         </div>
