--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </nav>
     </header> 
     <div id="InputBox" class="col">
-        <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" class=".img-fluid" alt="Map of Seattle">
-<!--         <div class="pac-card" id="pac-card"> -->
-            <input type="text" placeholder="Search" id="pac-input"class="controls">
+        <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" alt="Map of Seattle">
+        <!-- <div class="pac-card" id="pac-card"> -->
+            <input type="search" placeholder="Search" id="pac-input"class=" ">
                     <button type="submit"
                         id="search-button">Search</button>
             </input>      
@@ -39,7 +39,6 @@
             </div>
         </div>
     </div>
-   
     <div id="map" ></div>         
     </div>
     <script src="./wikiapi.js"></script>
