--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     <div class="parent">
         <div class="row">
-            <div class="col">
+            <div class="col" id="left-child">
                 <h3 id="city-name-text">
                 </h3>
                 <p id="wiki-text">
