Added local storage feature

--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
         </input>      
     </div>
     <div class="parent">
-        <div class="leftchild">
+        <div class="leftchild" id="leftchild">
             <h3 id="city-name-text">
             </h3>
             <p id="wiki-text">
