--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 </h3>
                 <p id="wiki-text">
                 </p> 
+                <div id="last-city">
+                </div>    
             </div>
             <div class="col">
                 <section>
