--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </nav>
     </header> 
     <div id="InputBox" class="col">
-        <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" alt="Map of Seattle">
+        <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" alt="Map of Seattle" class=".img-fluid">
         <!-- <div class="pac-card" id="pac-card"> -->
-            <input type="search" placeholder="Search" id="pac-input"class=".img-fluid">
+            <input type="search" placeholder="Search" id="pac-input">
                     <button type="submit"
                         id="search-button">Search</button>
             </input>      
