--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <script src="./image_script.js"></script>
     <script src="./maps_script.js"></script>
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj60xSlwjTCulTpFV4vzN_dU2Aq32B308&callback=initAutocomplete&libraries=places&v=weekly"
-    defer></script>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj60xSlwjTCulTpFV4vzN_dU2Aq32B308&callback=initAutocomplete&libraries=places&v=weekly">
+    </script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>        
 
    
