--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <h1>City Scan</h1>
         </nav>
     </header> 
+    <div class=headerPic>
+         <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" alt="Map of Seattle" class=".img-fluid">
+    </div>    
     <div id="InputBox" class="col">
-        <img id="IMGSEA" src="https://images.squarespace-cdn.com/content/v1/5c2d06bd8f51304e8d79dfa0/1552854565809-S5SA1QF5VU3NGJ6NWRZP/Seattle+Skyline.jpg?format=2500w" alt="Map of Seattle" class=".img-fluid">
         <!-- <div class="pac-card" id="pac-card"> -->
             <input type="search" placeholder="Search" id="pac-input">
                     <button type="submit"
