--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="last-city">
                 </div>    
             </div>
-            <div class="col">
+            <div class="col" id="cityPic">
                 <section>
                     <image id="showimage"></image>
                 </section>
