--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <div id="last-city">
                 </div>    
             </div>
-            <div class="col" id="cityPic">
-                <section>
+            <div class="col" >
+                <section id="cityPic">
                     <image id="showimage"></image>
                 </section>
             </div>
