--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </div>    
             </div>
             <div class="col" >
-                <section id="cityPic">
-                    <image id="showimage"></image>
+                <section>
+                    <image class=".img-fluid" id="showimage"></image>
                 </section>
             </div>
         </div>
